Fixing desktop banner alignment, mobile row margin

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -95,7 +95,7 @@
         flex-direction: row;
 		padding-left: 50px;
         padding-right: 50px;
-		justify-content: flex-start;
+		justify-content: space-between;
     }
     #banner .banner-text{
         max-width: 50vw;
