--- a/src/components/HomeContent/Row.css
+++ b/src/components/HomeContent/Row.css
@@ -8,7 +8,7 @@
 .row .row-text{
     flex-direction: row;
     text-align: left;
-    margin: 0px 20px;
+    margin: 0px 15px;
 }
 .row .row-title h2{
     font-size: 1.75rem;
@@ -28,6 +28,8 @@
 }
 .row-image{
     margin-top: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .row-image img{
     max-height: 500px;
@@ -45,8 +47,14 @@
         flex-direction: row;
         align-items: flex-start;
     }
+    .row .row-text{
+        margin: 0 20px;
+    }
     .row .row-paragraph p{
         text-align: justify;
+    }
+    .row-image{
+        margin: auto 0;
     }
     img{
         width: 300px;
